# Multi-AI-Agent-With-Prompt

./: .gitignore  Dockerfile  FULL_DOCUMENTATION.md  Jenkinsfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/backend/: fast_api.py
app/common/: custom_exception.py  logger.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/: ui.py
custom_jenkins/: Dockerfile
