[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-ai-agent"
version = "0.0.1"
authors = [
    { name = "Deebyendu Mondal" }
]
requires-python = ">=3.14"

dynamic = ["dependencies"] 

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]